networkpolicy-service-a/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-client-1
  namespace: service-a
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: service-a
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/8
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: client-1
    - podSelector:
        matchLabels:
          app: client-1
